add-in/src/editor/editor.module.css
.editorContainer {
    margin: 20px;
    height: 80vh;
    background: #fff;
    color: #000;
    position: relative;
    line-height: 20px;
    font-weight: 400;
    text-align: left;
    border: 1px solid rgb(218, 218, 218);
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
    padding: 50px 0px 50px 50px;
}

.editor {
    resize: none;
    font-size: 16px;
    caret-color: rgb(5, 5, 5);
    position: relative;
    tab-size: 1;
    outline: 0;
    caret-color: #444;
    overflow-y: scroll;
    height: 80vh;
}
.placeholder {
    color: #6b6b6b;
    overflow: hidden;
    position: absolute;
    text-overflow: ellipsis;
    top: 50px;
    left: 50px;
    font-size: 15px;
    user-select: none;
    display: inline-block;
    pointer-events: none;
}

.paragraph {
    margin: 0 0 50px 0;
    position: relative;
}

